// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useNotifications error notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Success
      </span>
    </button>
    <div
      class="MuiSnackbar-root SnackbarItem-root MuiSnackbar-anchorOriginTopRight SnackbarItem-anchorOriginTopRight"
      height="0"
      style="top: 20px; transition: all 200ms; transition-delay: 150ms;"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root Notification-notificationRed Notification-notificationShadow Notification-notification Component-formNotification"
        role="alertdialog"
        style="webkit-transform: translate(0, 0); transform: translate(0, 0); webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <div
            class="Component-flex Notification-iconWrapper"
            style="align-items: center;"
          >
            <svg
              class="SvgExclamation16-root"
              color="#d42551"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M7.5 15a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15zm0-1a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13zM7 3h1v6H7V3zm0 8h1v1H7v-1z"
                  id="exclamation16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="exclamation16_svg__b"
                >
                  <use
                    xlink:href="#exclamation16_svg__a"
                  />
                </mask>
                <use
                  xlink:href="#exclamation16_svg__a"
                />
                <g
                  mask="url(#exclamation16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="MuiTypography-root Typography-bodyMedium MuiTypography-body1 Notification-content Notification-contentCloseButton"
          >
            Error message
          </div>
          <button
            class="MuiButtonBase-root Button-circular Button-medium Button-primaryBlue Button-root Notification-close"
            tabindex="0"
            title="Close Notification"
            type="button"
          >
            <span
              class="Component-flex Component-inline Button-content"
              style="align-items: center;"
            >
              <svg
                class="SvgCloseMinor16-root Button-icon Notification-closeIcon"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <defs>
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                    id="closeMinor16_svg__a"
                  />
                </defs>
                <g
                  fill-rule="evenodd"
                >
                  <mask
                    id="closeMinor16_svg__b"
                  >
                    <use
                      xlink:href="#closeMinor16_svg__a"
                    />
                  </mask>
                  <use
                    fill-rule="nonzero"
                    xlink:href="#closeMinor16_svg__a"
                  />
                  <g
                    mask="url(#closeMinor16_svg__b)"
                  >
                    <path
                      d="M0 0h16v16H0z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useNotifications info notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Success
      </span>
    </button>
    <div
      class="MuiSnackbar-root SnackbarItem-root MuiSnackbar-anchorOriginTopRight SnackbarItem-anchorOriginTopRight"
      height="0"
      style="top: 20px; transition: all 200ms; transition-delay: 150ms;"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root Notification-notificationWhite Notification-notificationShadow Notification-notification Component-generalNotification"
        role="alertdialog"
        style="webkit-transform: translate(0, 0); transform: translate(0, 0); webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <div
            class="Component-flex Notification-iconWrapper"
            style="align-items: center;"
          >
            <svg
              class="SvgInfo16-root"
              color="#c4c6ca"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M7.5 15a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15zm0-1a6.5 6.5 0 1 0 0-13 6.5 6.5 0 0 0 0 13zM7 6h1v6H7V6zm0-3h1v1H7V3z"
                  id="info16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="info16_svg__b"
                >
                  <use
                    xlink:href="#info16_svg__a"
                  />
                </mask>
                <use
                  xlink:href="#info16_svg__a"
                />
                <g
                  mask="url(#info16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="MuiTypography-root Typography-bodyMedium MuiTypography-body1 Notification-content Notification-contentCloseButton"
          >
            Info message
          </div>
          <button
            class="MuiButtonBase-root Button-circular Button-medium Button-primaryBlue Button-root Notification-close"
            tabindex="0"
            title="Close Notification"
            type="button"
          >
            <span
              class="Component-flex Component-inline Button-content"
              style="align-items: center;"
            >
              <svg
                class="SvgCloseMinor16-root Button-icon Notification-closeIcon"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <defs>
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                    id="closeMinor16_svg__a"
                  />
                </defs>
                <g
                  fill-rule="evenodd"
                >
                  <mask
                    id="closeMinor16_svg__b"
                  >
                    <use
                      xlink:href="#closeMinor16_svg__a"
                    />
                  </mask>
                  <use
                    fill-rule="nonzero"
                    xlink:href="#closeMinor16_svg__a"
                  />
                  <g
                    mask="url(#closeMinor16_svg__b)"
                  >
                    <path
                      d="M0 0h16v16H0z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`useNotifications success notification render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Error
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Info
      </span>
    </button>
    <button
      class="MuiButtonBase-root Button-medium Button-primaryBlue Button-root"
      tabindex="0"
      type="button"
    >
      <span
        class="Component-flex Component-inline Button-content"
        style="align-items: center;"
      >
        Show Success
      </span>
    </button>
    <div
      class="MuiSnackbar-root SnackbarItem-root MuiSnackbar-anchorOriginTopRight SnackbarItem-anchorOriginTopRight"
      height="0"
      style="top: 20px; transition: all 200ms; transition-delay: 150ms;"
    >
      <div
        class="MuiTypography-root MuiTypography-body2 MuiPaper-root MuiPaper-elevation6 MuiSnackbarContent-root Notification-notificationGreen Notification-notificationShadow Notification-notification Component-formNotification"
        role="alertdialog"
        style="webkit-transform: translate(0, 0); transform: translate(0, 0); webkit-transition: -webkit-transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms; transition: transform 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;"
      >
        <div
          class="MuiSnackbarContent-message"
        >
          <div
            class="Component-flex Notification-iconWrapper"
            style="align-items: center;"
          >
            <svg
              class="SvgCheckMinor16-root"
              color="#00cc83"
              style="min-width: 16px; min-height: 16px;"
              viewBox="0 0 16 16"
            >
              <defs>
                <path
                  d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
                  id="checkMinor16_svg__a"
                />
              </defs>
              <g
                fill-rule="evenodd"
              >
                <mask
                  id="checkMinor16_svg__b"
                >
                  <use
                    xlink:href="#checkMinor16_svg__a"
                  />
                </mask>
                <use
                  fill-rule="nonzero"
                  xlink:href="#checkMinor16_svg__a"
                />
                <g
                  mask="url(#checkMinor16_svg__b)"
                >
                  <path
                    d="M0 0h16v16H0z"
                  />
                </g>
              </g>
            </svg>
          </div>
          <div
            class="MuiTypography-root Typography-bodyMedium MuiTypography-body1 Notification-content Notification-contentCloseButton"
          >
            Success message
          </div>
          <button
            class="MuiButtonBase-root Button-circular Button-medium Button-primaryBlue Button-root Notification-close"
            tabindex="0"
            title="Close Notification"
            type="button"
          >
            <span
              class="Component-flex Component-inline Button-content"
              style="align-items: center;"
            >
              <svg
                class="SvgCloseMinor16-root Button-icon Notification-closeIcon"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <defs>
                  <path
                    d="M8.707 8l3.5 3.5-.707.707-3.5-3.5-3.5 3.5-.707-.707 3.5-3.5-3.5-3.5.707-.707 3.5 3.5 3.5-3.5.707.707-3.5 3.5z"
                    id="closeMinor16_svg__a"
                  />
                </defs>
                <g
                  fill-rule="evenodd"
                >
                  <mask
                    id="closeMinor16_svg__b"
                  >
                    <use
                      xlink:href="#closeMinor16_svg__a"
                    />
                  </mask>
                  <use
                    fill-rule="nonzero"
                    xlink:href="#closeMinor16_svg__a"
                  />
                  <g
                    mask="url(#closeMinor16_svg__b)"
                  >
                    <path
                      d="M0 0h16v16H0z"
                    />
                  </g>
                </g>
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
